--- a/index.html
+++ b/index.html
@@ -23,52 +23,52 @@
             <div class="songItemContainer">
                 <div class="songItem">
                     <img alt="1">
-                    <span class="songName">Let me Love You</span>
+                    <span class="songName">$UICIDEBOY$ - New Profile Pic</span>
                     <span class="songlistplay"><span class="timestamp">2:08 <i id="0" class="far songItemPlay fa-play-circle"></i> </span></span>
                 </div>
                 <div class="songItem">
                     <img alt="1">
-                    <span class="songName">Let me Love You</span>
+                    <span class="songName">$UICIDEBOY$ - New Profile Pic</span>
                     <span class="songlistplay"><span class="timestamp">4:36 <i id="1" class="far songItemPlay fa-play-circle"></i> </span></span>
                 </div>
                 <div class="songItem">
                     <img alt="1">
-                    <span class="songName">Let me Love You</span>
+                    <span class="songName">$UICIDEBOY$ - New Profile Pic</span>
                     <span class="songlistplay"><span class="timestamp">4:04 <i id="2" class="far songItemPlay fa-play-circle"></i> </span></span>
                 </div>
                 <div class="songItem">
                     <img alt="1">
-                    <span class="songName">Let me Love You</span>
+                    <span class="songName">$UICIDEBOY$ - New Profile Pic</span>
                     <span class="songlistplay"><span class="timestamp">4:51 <i id="3" class="far songItemPlay fa-play-circle"></i> </span></span>
                 </div>
                 <div class="songItem">
                     <img alt="1">
-                    <span class="songName">Let me Love You</span>
+                    <span class="songName">$UICIDEBOY$ - New Profile Pic</span>
                     <span class="songlistplay"><span class="timestamp">2:47 <i id="4" class="far songItemPlay fa-play-circle"></i> </span></span>
                 </div>
                 <div class="songItem">
                     <img alt="1">
-                    <span class="songName">Let me Love You</span>
+                    <span class="songName">$UICIDEBOY$ - New Profile Pic</span>
                     <span class="songlistplay"><span class="timestamp">3:01 <i id="5" class="far songItemPlay fa-play-circle"></i> </span></span>
                 </div>
                 <div class="songItem">
                     <img alt="1">
-                    <span class="songName">Let me Love You</span>
+                    <span class="songName">$UICIDEBOY$ - New Profile Pic</span>
                     <span class="songlistplay"><span class="timestamp">4:28 <i id="6" class="far songItemPlay fa-play-circle"></i> </span></span>
                 </div>
                 <div class="songItem">
                     <img alt="1">
-                    <span class="songName">Let me Love You</span>
+                    <span class="songName">$UICIDEBOY$ - New Profile Pic</span>
                     <span class="songlistplay"><span class="timestamp">2:56 <i id="7" class="far songItemPlay fa-play-circle"></i> </span></span>
                 </div>
                 <div class="songItem">
                     <img alt="1">
-                    <span class="songName">Let me Love You</span>
+                    <span class="songName">$UICIDEBOY$ - New Profile Pic</span>
                     <span class="songlistplay"><span class="timestamp">3:47 <i id="8" class="far songItemPlay fa-play-circle"></i> </span></span>
                 </div>
                 <div class="songItem">
                     <img alt="1">
-                    <span class="songName">Let me Love You</span>
+                    <span class="songName">$UICIDEBOY$ - New Profile Pic</span>
                     <span class="songlistplay"><span class="timestamp">2:47 <i id="9" class="far songItemPlay fa-play-circle"></i> </span></span>
                 </div>
             </div>
